--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
    "name": "webpack-template",
+   "version": "0.0.1",
+   "description": "",
    "private": true,
    "type": "module",
    "scripts": {
@@ -28,6 +30,8 @@
       "@babel/preset-env": "^7.16.11",
       "@babel/preset-react": "^7.16.7",
       "@babel/preset-typescript": "^7.16.7",
+      "@types/fs-extra": "^9.0.13",
+      "@types/webpack-env": "^1.16.4",
       "babel-eslint": "^10.1.0",
       "babel-loader": "^8.2.5",
       "clean-webpack-plugin": "^4.0.0",
@@ -37,11 +41,17 @@
       "css-minimizer-webpack-plugin": "^3.4.1",
       "eslint": "^8.14.0",
       "eslint-loader": "^4.0.2",
+      "fs-extra": "^10.1.0",
+      "html-loader": "^3.1.0",
+      "html-replace-webpack-plugin": "^2.6.0",
       "html-webpack-plugin": "^5.5.0",
       "mini-css-extract-plugin": "^2.6.0",
       "node-sass": "^7.0.1",
       "sass-loader": "^12.6.0",
       "style-loader": "^3.3.1",
+      "svg-sprite-loader": "^6.0.11",
+      "svg-transform-loader": "^2.0.13",
+      "svgo-loader": "^3.0.0",
       "terser-webpack-plugin": "^5.3.1",
       "url": "^0.11.0",
       "webpack": "^5.72.0",
